# anthropic-deep-research

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/anthropic_openai/: __init__.py  agent_loop.py  definitions.py  log.py
src/anthropic_openai/settings/: credentials.py
