[project]
name = "anthropic-openai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "milkymap", email = "ibrahima.elmokhtar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "click>=8.1.8",
    "modal>=0.73.98",
    "openai>=1.66.3",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "pyzmq>=26.3.0",
]

[project.scripts]
anthropic-openai = "anthropic_openai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
